# master-term2-ir-term

./: .gitmodules  CMakeLists.txt
docs/reports/d/: Makefile
docs/reports/d/src/: main.tex  title.tex
docs/reports/f/src/: main.tex  title.aux  title.tex
docs/slides/: Makefile
docs/slides/src/: main.tex
frontend/: config.py  requirements.txt
frontend/app/: __init__.py
frontend/app/helpers/: fetcher.py  helpers.py
frontend/app/static/: minimal_css.css  style_r.css  style_s.css  style_t.css
frontend/app/templates/: index.html  layout.html  result.html  results.html  results_block.html
frontend/app/views/: general.py
include/: common.hpp  doc_info.hpp  idf_table.hpp  indexer.hpp  merger.hpp  ranker.hpp  searcher.hpp
scripts/: run_indexing.sh  run_merging.sh
scripts/crawler/: run.sh  vk_crawler.py
scripts/quality/: calc_kappa.py  calc_stat.py  google.txt  google_stat.txt  vgroups_1.txt  vgroups_2.txt  yandex.txt  yandex_stat.txt
src/: common.cpp  doc_info.cpp  get_idf.cpp  idf_table.cpp  indexer.cpp  merger.cpp  ranker.cpp  run_calc_idf.cpp  run_collect_doc_info.cpp  run_indexer.cpp  run_merger.cpp  run_searcher.cpp  searcher.cpp  tcp_worker.cpp
